compiler/testData/diagnostics/tests/subtyping/topLevelAnonymousObjects.fir.kt
// RUN_PIPELINE_TILL: SOURCE
private var x = object {}

fun test() {
    x = <!ASSIGNMENT_TYPE_MISMATCH!>object<!> {}
}
